--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,18 @@
       <version>4.3.1.Final</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.junit.platform</groupId>
+    	<artifactId>junit-platform-runner</artifactId>
+    	<version>1.0.0-M4</version>
+    	<scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.junit.jupiter</groupId>
+    	<artifactId>junit-jupiter-engine</artifactId>
+    	<version>5.0.0-M4</version>
+    	<scope>test</scope>
+    </dependency>
 	</dependencies>
   <build>
     <plugins>
